<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">feed.me</string>
    <string name="edit_history">Edit History</string>
    <string name="action_add">Add</string>
    <string name="page_1">Go to your Homescreen and Add Feed.Me Widget</string>
    <string name="page_2">Click feed button to refresh News</string>
    <string name="page_3">Click Icon to get to Search History</string>
    <string name="page_4">Remove the History Items</string>
    <string name="page_5">Add Custom Topics</string>
    <string name="empty_string">Check Internet Connection and Press Refresh Button</string>
    <string name="start_widget">Launch</string>
    <string name="theme_string">Theme</string>
    <string name="theme_update_interval">Update Interval</string>
    <string name="max_history">Max History Items</string>
    <string name="max_per_history">Max Articles per Topic</string>
    <string name="history_hint">0 - 20</string>
    <string name="max_hint">1 - 4</string>
    <string name="customize">Customize History</string>
    <string name="title_activity_add">Add Topics</string>
    <string name="hello_world">Hello world!</string>
	<string name="notification_ticker_text">you have been fed !</string>
</resources>