<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" > <!-- android:layout_weight="0.10" -->
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/content"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="3dip"
            android:layout_marginTop="5dip"
            android:layout_weight="0.7"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/theme_string"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/theme_spinner"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.30" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/update_interval_textview"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="3dip"
            android:layout_marginTop="5dip"
            android:layout_weight="0.7"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/theme_update_interval"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/update_interval_spinner"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/max_history_textview"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="3dip"
            android:layout_marginTop="5dip"
            android:layout_weight="0.7"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/max_history"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/max_items_from_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/history_hint"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/max_per_history_textview"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="3dip"
            android:layout_marginTop="5dip"
            android:layout_weight="0.7"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/max_per_history"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/max_items_per_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/max_hint"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/customize_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="3dip"
            android:layout_marginTop="5dip"
            android:clickable="true"
            android:fontFamily="sans-serif-condensed"
            android:onClick="onClick"
            android:text="@string/customize"
            android:textColor="#ffffff"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/widgetStartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/start_widget" >
    </Button>

</LinearLayout>